final update v1.0.0 all fixed

--- a/app/src/main/res/layout/card5_job_posted.xml
+++ b/app/src/main/res/layout/card5_job_posted.xml
@@ -49,6 +49,7 @@
             android:id="@+id/notify_time"
             android:layout_marginEnd="10dp"
             android:textColor="@color/black"
+            android:textSize="10dp"
             android:layout_marginTop="2dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
