--- a/app/src/main/res/layout/ui3_add_job.xml
+++ b/app/src/main/res/layout/ui3_add_job.xml
@@ -143,6 +143,8 @@
                 android:id="@+id/name_openings"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:textAlignment="center"
                 android:autofillHints=""
                 android:background="@drawable/shape_additional_edit_text_shaper"
                 android:inputType="number"
