--- a/app/src/main/res/layout/ui7_settings.xml
+++ b/app/src/main/res/layout/ui7_settings.xml
@@ -160,6 +160,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
+                        android:padding="4dp"
                         android:layout_marginStart="80dp"
                         android:background="@drawable/shape_additional_edit_text_shaper"
                         tools:ignore="RtlHardcoded" />
