--- a/app/src/main/res/layout/ui9_view_job.xml
+++ b/app/src/main/res/layout/ui9_view_job.xml
@@ -145,7 +145,9 @@
             <TextView
                 android:id="@+id/name_openings"
                 android:layout_width="0dp"
+                android:padding="4dp"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:autofillHints=""
                 android:background="@drawable/shape_additional_edit_text_shaper"
                 android:textColor="@color/black"
@@ -170,6 +172,8 @@
             <TextView
                 android:id="@+id/spinner_1"
                 android:layout_width="wrap_content"
+                android:padding="4dp"
+                android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_additional_edit_text_shaper"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -211,6 +215,8 @@
                 android:id="@+id/spinner_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:textColor="@color/black"
                 android:layout_marginStart="10dp"
                 android:background="@drawable/shape_additional_edit_text_shaper"
                 app:layout_constraintBottom_toBottomOf="@+id/textView15"
@@ -233,8 +239,10 @@
             <TextView
                 android:id="@+id/spinner_state"
                 android:layout_width="wrap_content"
+                android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:padding="4dp"
                 android:background="@drawable/shape_additional_edit_text_shaper"
                 app:layout_constraintBottom_toBottomOf="@+id/textView15"
                 app:layout_constraintStart_toEndOf="@+id/textView15"
